--- a/CarWashing/Info.plist
+++ b/CarWashing/Info.plist
@@ -87,6 +87,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
