--- a/CarWashing/Info.plist
+++ b/CarWashing/Info.plist
@@ -36,7 +36,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx36260a82ad0e51bb</string>
+				<string>wx391fd62749c99d3a</string>
 			</array>
 		</dict>
 	</array>
