--- a/CarWashing/Info.plist
+++ b/CarWashing/Info.plist
@@ -41,6 +41,14 @@
 				<string>wx391fd62749c99d3a</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>JinDing</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
