--- a/CarWashing/Info.plist
+++ b/CarWashing/Info.plist
@@ -28,7 +28,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.9</string>
+	<string>1.2.2</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -51,7 +51,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>6</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSApplicationCategoryType</key>
@@ -72,29 +72,29 @@
 		<true/>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>App需要您的同意,才能访问媒体资料库</string>
+	<string>App需要您的同意,才能获取媒体库资料以选择图片或其他媒体文件</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>App需要您的同意,才能访问蓝牙</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>App需要您的同意,才能访问日历</string>
 	<key>NSCameraUsageDescription</key>
-	<string>需要你的同意才能访问相机</string>
+	<string>需要你的同意才能访问相机以摄影或扫描二维码</string>
 	<key>NSHealthShareUsageDescription</key>
 	<string>App需要您的同意,才能访问健康分享</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>App需要您的同意,才能访问健康更新 </string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>打开功能</string>
+	<string>需要你的同意才能访问您所在的地理位置以匹配该地区可提供的服务及距离</string>
 	<key>NSLocationUsageDescription</key>
-	<string>打开此功能</string>
+	<string>需要你的同意才能访问您所在的地理位置以匹配该地区可提供的服务及距离</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>打开此功能</string>
+	<string>需要你的同意才能访问您所在的地理位置以匹配该地区可提供的服务及距离</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>App需要您的同意,才能访问麦克风</string>
 	<key>NSMotionUsageDescription</key>
 	<string>App需要您的同意,才能访问运动与健身</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要你的同意才能访问相册</string>
+	<string>需要你的同意才能访问相册以选择图片</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>App需要您的同意,才能访问提醒事项</string>
 	<key>UIMainStoryboardFile</key>
@@ -103,6 +103,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
